Commit before merge

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,19 +14,4 @@
  *= require_self
  */
 
-@import "bootstrap-sprockets";
-@import "bootstrap-datepicker";
-@import "bootstrap";
-@import "font-awesome";
-
-//*------------------------------------*
-//  Theme CSS
-//*------------------------------------*
-
-@import "theme/*";
-
-//*------------------------------------*
-//  Devise CSS
-//*------------------------------------*
-
-@import "app/**/*";
+@import "@fortawesome/fontawesome-free/css/all.min.css";
