--- a/app/assets/stylesheets/theme/_colors.scss
+++ b/app/assets/stylesheets/theme/_colors.scss
@@ -1,8 +1,10 @@
 // main
 $blue-navy: #29304d;
+$blue-navy-light: #df5f18;
 $gray-light: #c8c7cf;
 $orange-dark: #df5f18;
 $orange-light: #e58440;
+$orange-cream: #e58440;
 
 // social
 $facebook: #3a589e;
