--- a/app/assets/stylesheets/app/app.scss
+++ b/app/assets/stylesheets/app/app.scss
@@ -1,14 +1,14 @@
-@import "font-awesome";
-@import "theme/colors";
+// @import "font-awesome";
+// @import "theme/colors";
 
-html {
-  box-sizing: border-box;
-}
+// html {
+//   box-sizing: border-box;
+// }
 
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-  margin: 0;
-  padding: 0;
-}
+// *,
+// *::before,
+// *::after {
+//   box-sizing: inherit;
+//   margin: 0;
+//   padding: 0;
+// }
