--- a/app/assets/stylesheets/theme/_colors.scss
+++ b/app/assets/stylesheets/theme/_colors.scss
@@ -1,10 +1,10 @@
 // main
 $blue-navy: #29304d;
-$blue-navy-light: #df5f18;
+$blue-navy-light: #4b5b71;
 $gray-light: #c8c7cf;
 $orange-dark: #df5f18;
 $orange-light: #e58440;
-$orange-cream: #e58440;
+$orange-cream: #f5d1b7;
 
 // social
 $facebook: #3a589e;
