--- a/app/assets/stylesheets/app/app.scss
+++ b/app/assets/stylesheets/app/app.scss
@@ -43,3 +43,12 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+.Hero {
+  height: 100vh;
+  width: 100vw;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(image-path("hero_background"));
+}
