--- a/app/assets/stylesheets/theme/_colors.scss
+++ b/app/assets/stylesheets/theme/_colors.scss
@@ -14,5 +14,17 @@ $twitter: #4ab3f4;
 // basic
 $black: #000000;
 $white: #ffffff;
+$gray-dark: #5c646e;
+$gray-darker: #4f4f4f;
+$gray-light-alt: #bbbbbb;
+$gray-lighter-alt: #eaeaea;
+$gray-lighter: #f4f4f4;
+$gray-text: #9e9e9e;
+$gray: #808080;
+$ghostwhite: #f9f9fb;
+$iron: #dddfe2;
+$lightgray: #cddada;
+
+
 
 // others
