--- a/app/assets/stylesheets/app/app.scss
+++ b/app/assets/stylesheets/app/app.scss
@@ -55,6 +55,10 @@ a {
   }
 }
 
+p {
+  margin: 0;
+}
+
 ul {
   list-style-type: none;
 }
@@ -143,8 +147,48 @@ table {
   }
 }
 
+.Info {
+  align-items: center;
+  background-color: $orange-cream;
+  background-image: url(image-path("info_bg.svg"));
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: $blue-navy;
+  display: flex;
+  font-family: "Circular";
+  flex-direction: column;
+  padding: 60px 40px;
+  text-align: center;
+
+  .ic-icon {
+    max-width: 150px;
+  }
+}
+
+.Magic {
+  &__content {
+    padding: 25px 40px 15px 20px;
+    margin: 50px 100px;
+    position: relative;
+  }
+  &__title {
+    font-family: "Megrim";
+  }
+
+  &__border {
+    z-index: 10;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    border-style: solid;
+    border-width: 2px;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .ParticlesSpace {
-  cursor: pointer;
   margin: 0;
   paddin: 0;
   position: absolute;
