Fix parallax of hero

--- a/app/assets/stylesheets/app/app.scss
+++ b/app/assets/stylesheets/app/app.scss
@@ -160,6 +160,7 @@ table {
   flex-direction: column;
   padding: 60px 40px;
   text-align: center;
+  position: relative;
 
   .ic-icon {
     max-width: 150px;
