--- a/app/assets/stylesheets/app/app.scss
+++ b/app/assets/stylesheets/app/app.scss
@@ -167,6 +167,56 @@ table {
   }
 }
 
+.Activities {
+  align-items: center;
+  background-color: $gray-light;
+  // background-image: url(image-path("info_bg.svg"));
+  // background-position: top;
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  color: $blue-navy;
+  display: flex;
+  font-family: "Circular";
+  flex-direction: column;
+  padding: 60px 40px;
+  text-align: center;
+  position: relative;
+
+  &__row {
+    display: flex;
+    flex-wrap: wrap;
+    
+    .Activities__col {
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
+      margin-right: 10px;
+      padding: 50px 20px;
+      width: 400px;
+      align-items: center;
+
+      &--chamber {
+        background-color: $blue-navy;
+        color: white;
+      }
+
+      &--hat {
+        background-color: $blue-navy-light;
+        color: white;
+      }
+      &--move {
+        background-color: white;
+        color: $blue-navy;
+      }
+
+      img {
+        max-height: 250px;
+        margin: 50px 0px;
+      }
+    }
+  }
+}
+
 .Magic {
   &__content {
     padding: 25px 40px 15px 20px;
