Fix fucking many things

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,8 +14,15 @@
  *= require_self
  */
 
-@import "@fortawesome/fontawesome-free/css/all.min.css";
-@import "bootstrap/dist/css/bootstrap.min.css";
+// @import "@fortawesome/fontawesome-free/css/all.min.css";
+// @import "bootstrap/dist/css/bootstrap.min.css";
+
+//*------------------------------------*
+//  Font CSS
+//*------------------------------------*
+
+@import "layout/*";
+
 
 //*------------------------------------*
 //  Theme CSS
