--- a/app/assets/stylesheets/app/app.scss
+++ b/app/assets/stylesheets/app/app.scss
@@ -9,25 +9,10 @@ $ic-width-mobile: 580px;
 $ic-width-tablet: 900px;
 $ic-width-tablet-l: 1200px;
 
-@font-face {
-  font-family: "Browallia New";
-  src: url(/assets/fonts/Browallia_New.ttf) format("truetype");
-}
-
-@font-face {
-  font-family: "Axis";
-  src: url(/assets/fonts/Axis.otf) format("opentype");
-}
-
-@font-face {
-  font-family: "Circular";
-  src: url(/assets/fonts/Circular.ttf) format("truetype");
-}
-
-@font-face {
-  font-family: "Supermarket";
-  src: url(/assets/fonts/Supermarket.ttf) format("truetype");
-}
+$bootstrap-width-mobile: 576px;
+$bootstrap-width-tablet: 768px;
+$bootstrap-width-tablet-l: 992px;
+$bootstrap-width-desktop: 1200px;
 
 html {
   box-sizing: border-box;
@@ -42,11 +27,11 @@ html {
 }
 
 body {
-  font-size: 24px;
-  font-family: "Circular", "Mitr", sans-serif;
+  font-size: 24px !important;
+  font-family: "Circular", "Mitr", sans-serif !important;
 
   @media (max-width: $ic-width-mobile) {
-    font-size: 18px;
+    font-size: 18px !important;
   }
 }
 
@@ -73,7 +58,7 @@ img {
 }
 
 p {
-  margin: 0;
+  margin: 0 !important;
 }
 
 ul {
@@ -90,12 +75,27 @@ table {
   color: $blue-navy-light;
   font-family: "kanit";
 
+  .nav-item {
+    margin: 0px 5px;
+  }
+
   .navbar-brand {
     img {
       max-height: 40px;
     }
     &.hidden {
       display: none;
+      @media (max-width: $bootstrap-width-tablet) {
+        display: inherit !important;
+      }
+    }
+  }
+
+  .navbar-toggler {
+    margin-left: auto;
+
+    @media (max-width: $bootstrap-width-tablet) {
+      margin-left: auto;
     }
   }
 
@@ -545,6 +545,18 @@ table {
         color: $blue-navy;
       }
 
+      h1 {
+        font-size: 30px;
+
+        @media only screen and (max-width: $ic-width-tablet) {
+          font-size: 27px;
+        }
+
+        @media only screen and (max-width: $ic-width-mobile) {
+          font-size: 23px;
+        }
+      }
+
       img {
         max-height: 250px;
         margin: 50px 0px;
@@ -642,6 +654,7 @@ table {
         cursor: pointer;
         display: flex;
         justify-content: flex-end;
+        align-items: center;
         margin: 2.5px 0px;
         padding: 0px 30px;
         text-align: right;
@@ -709,6 +722,10 @@ table {
           border-top: 2px solid $blue-navy;
           border-left: 0px;
           width: 100%;
+        }
+
+        h1 {
+          font-size: 30px;
         }
 
         .trans-content {
