--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all'%>
+    <%= stylesheet_pack_tag 'bootstrap' %>
     <%= javascript_pack_tag 'index' %>
 
   </head>
